--- a/BlazorApp2.csproj
+++ b/BlazorApp2.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="3.2.2" />
+    <PackageReference Include="Fluxor.Blazor.Web" Version="5.7.0" />
+    <PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.7.0" />
   </ItemGroup>
 
 </Project>
